--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "repository": "https://github.com/OpenINF/wg-a-team.git",
   "author": "Derek Lewis <DerekNonGeneric@inf.is>",
-  "license": "CC-BY-4.0",
+  "license": "MIT OR Apache-2.0",
   "private": true,
   "devDependencies": {
     "node-core-utils": "3.0.0"
